fix: spacer with fixed size wrong width

--- a/packages/default/scss/toolbar/_layout.scss
+++ b/packages/default/scss/toolbar/_layout.scss
@@ -108,12 +108,10 @@
 
 
         // Spacer
-        .k-spacer,
         .k-toolbar-spacer {
             height: $line-height-em;
             flex: 1 1 auto;
         }
-
 
         // Template
         .k-toolbar-template {
